--- a/meteo-app/src/App.css
+++ b/meteo-app/src/App.css
@@ -26,6 +26,26 @@ p {
     z-index: -1;
   }
 
+  .Risultati {
+    width: 100%;
+    height: 100dvh;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.8);
+    background-color: url('./assets/img/bg.jpg');
+    color: #fff;
+  }
+  
+  .Risultati:before {
+    content: '';
+    background: url('./assets/img/bg.jpg') no-repeat center center/cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+
   .Container {
     max-width: 700px;
     height: 700px;
@@ -38,12 +58,12 @@ p {
     justify-content: space-between;
   }
 
-  .App .Main {
+  .Risultati .Main {
     width: 100%;
     margin: 1rem auto;
   }
 
-  .App .Descrizione {
+  .Risultati .Descrizione {
     position: relative;
     right: -90%;
     transform-origin: 0 0;
@@ -59,7 +79,7 @@ p {
     border-radius: 12px;
   }
 
-  .App .Section {
+  .Risultati .Section {
       display: flex;
       justify-content: space-evenly;
       text-align: center;
@@ -90,4 +110,14 @@ p {
 
   .Bold {
     font-weight: 700;
+  }
+
+  button {
+    margin: 1rem;
+    padding: .7rem 1.5rem;
+    font-size: 1.2rem;
+    border-radius: 25px;
+    border: 1px solid rgba(255,255,255, 0.8);
+    background: rgba(255,255,255, 0.5);
+    color: white;
   }
